--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,29 @@
 alembic==1.11.1
 anyio==4.8.0
+astroid==3.3.8
 asyncpg==0.28.0
 click==8.1.8
+dill==0.3.9
 exceptiongroup==1.2.2
 fastapi==0.100.0
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+isort==5.13.2
 Mako==1.3.8
 MarkupSafe==3.0.2
+mccabe==0.7.0
+platformdirs==4.3.6
+psycopg2-binary==2.9.10
 pydantic==1.10.21
+pylint==3.3.3
 python-dotenv==1.0.1
 sniffio==1.3.1
-SQLAlchemy==1.4.41
+SQLAlchemy==2.0.37
 sqlalchemy2-stubs==0.0.2a38
-sqlmodel==0.0.8
+sqlmodel==0.0.22
 starlette==0.27.0
+tomli==2.2.1
+tomlkit==0.13.2
 typing_extensions==4.12.2
 uvicorn==0.22.0
