--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,54 @@ alembic==1.11.1
 anyio==4.8.0
 astroid==3.3.8
 asyncpg==0.28.0
+bcrypt==4.2.1
+certifi==2024.12.14
+cffi==1.17.1
 click==8.1.8
+cryptography==44.0.0
 dill==0.3.9
+ecdsa==0.19.0
 exceptiongroup==1.2.2
-fastapi==0.100.0
+fastapi==0.115.6
+fire==0.7.0
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 isort==5.13.2
 Mako==1.3.8
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mccabe==0.7.0
+mdurl==0.1.2
+packaging==24.2
+passlib==1.7.4
 platformdirs==4.3.6
+pluggy==1.5.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==1.10.21
+Pygments==2.19.1
 pylint==3.3.3
+pytest==8.3.4
+pytest-asyncio==0.25.2
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+rav==0.0.9
+rich==13.9.4
+rsa==4.9
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 sqlalchemy2-stubs==0.0.2a38
 sqlmodel==0.0.22
-starlette==0.27.0
+starlette==0.41.3
+termcolor==2.5.0
 tomli==2.2.1
 tomlkit==0.13.2
 typing_extensions==4.12.2
